--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.7.4
+ - enh: finish importer for archived data (#1)
 0.7.3
  - enh: add a ``job_id`` for the "symlink" background job
  - enh: add ckan command "list-all-resources" which prints
