--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.7.10
+ - enh: internal-import now supports --start-date and --end-date
 0.7.9
  - fix: avoid bad datasets on internal-import and print less to stdout
 0.7.8
