--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 0.8.3
+ - enh: add --skip-failed option for depotize
  - enh: minor improvements of depotize script
 0.8.2
  - enh: minor improvements of depotize script
