--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.8.4
+ - fix: depotize arguments not passed during directory iteration
 0.8.3
  - enh: add --skip-failed option for depotize
  - enh: minor improvements of depotize script
