--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.8.11
+ - enh: allow to manually acknowledge unknown files by creating
+   the file "unsorted_acknowledged.txt"
 0.8.10
  - enh: skip extraction during depotize if 'data' directory exists
  - enh: allow an ancillary file to be shared by multiple measurements
