--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.8.15
+ - fix: activate datasets after figshare/internal import
 0.8.14
  - fix: some alerts might not have been caught in depotize, which
    is only a minor issue
