--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.8.17
+ - fix: regression in 0.8.16 - depotize did not work due to typo
 0.8.16
  - fix: remove .md5 sum files during cleanup in depotize-archive
  - ref: do not activate datasets if they already exists (internal
