--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.9.0
+ - feat: implement `upgrade-internal` CKAN CLI command to add new
+   versions of internal resources
 0.8.19
  - setup: bump dclab to 0.33.1
 0.8.18
