--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.9.1
+ - update readme
+ - fix: upgrade-internal could not deal with white spaces
 0.9.0
  - feat: implement `upgrade-internal` CKAN CLI command to add new
    versions of internal resources
