--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.9.2
+ - setup: increment dclab version from 0.33.1 to 0.33.2
 0.9.1
  - update readme
  - fix: upgrade-internal could not deal with white spaces
