--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 0.12.0
  - ref: migrate to CKAN 2.10
+ - fix: convert used deprecated dclab.rtdc_dataset.write module
 0.11.0
  - feat: add CLI command `append-resource` for adding resources to datasets
 0.10.3
