--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.13.0
+ - feat: introduce dcor-migrate-resources-to-object-store for new
+   S3-based resource storage
 0.12.1
  - fix: make bg jobs work with dcor_schemas 0.18.2
  - ref: cleanup jobs
