--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 0.13.1
  - enh: support generating S3 presigned URLs
+ - enh: improved error message on checksum mismatch for uploading to S3
 0.13.0
  - feat: introduce dcor-migrate-resources-to-object-store for new
    S3-based resource storage
