--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.13.2
+ - fix: compute SHA256 sum for resources that have none when migrating to S3
 0.13.1
  - enh: support generating S3 presigned URLs
  - enh: improved error message on checksum mismatch for uploading to S3
