--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.13.3
+ - fix: skip resources that are missing on DCOR when migrating to S3
 0.13.2
  - fix: compute SHA256 sum for resources that have none when migrating to S3
  - fix: use correct bucket name when setting public tags on objects
