ref: migrate S3 functionality to dcor_shared

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 0.13.3
- - enh: automated resource upload to S3 via background job
  - fix: skip resources that are missing on DCOR when migrating to S3
+ - enh: automated resource upload to S3 via background job
+ - ref: migrate S3 functionality to dcor_shared
 0.13.2
  - fix: compute SHA256 sum for resources that have none when migrating to S3
  - fix: use correct bucket name when setting public tags on objects
