--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.13.8
+ - maintenance release
 0.13.7
  - enh: add --verify-checksum flag to dcor-migrate-resources-to-object_store
  - setup: bump dcor_shared to 0.5.5
