--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 0.14.0
- - ref: migrate to dcor_shared 0.7.4
+ - ref: migrate to dcor_shared 0.8.0
  - ref: use f-strings
+ - ref: upload figshare depot data directly to S3
 0.13.8
  - maintenance release
 0.13.7
