feat: introduce job for backing up data from S3 to local block storage

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 0.14.0
  - BREANKING: remove `depotize` and `internal` submodules and functionalities
+ - feat: introduce job for backing up data from S3 to local block storage
  - ref: migrate to dcor_shared 0.8.0
  - ref: use f-strings
  - ref: upload figshare depot data directly to S3
