--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.15.3
+ - fix: properly indicate whether migrate_resource_to_s3_job actually did it
 0.15.2
  - setup: fix ckanext namespace
 0.15.1
