--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.16.1
+ - ci: update GitHub Actions workflow to use Docker for testing
 0.16.0
  - ref: partially migrate to dcor_schemas.RQJob
  - ref: deprecate resource symlinking
