--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.16.2
+ - ref: migrate s3 public tagging of resources to dcor_schemas
 0.16.1
  - ci: update GitHub Actions workflow to use Docker for testing
 0.16.0
