--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 0.16.2
  - ref: migrate s3 public tagging of resources to dcor_schemas
+ - tests: remove unused `DISABLE_AFTER_DATASET_CREATE_FOR_CONCURRENT_JOB_TESTS`
 0.16.1
  - ci: update GitHub Actions workflow to use Docker for testing
 0.16.0
