BREAKING: remove symlinking resources to user depot functionality

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
-0.16.2
+0.17.0
+ - BREAKING: remove symlinking resources to user depot functionality
  - ref: migrate s3 public tagging of resources to dcor_schemas
  - tests: remove unused `DISABLE_AFTER_DATASET_CREATE_FOR_CONCURRENT_JOB_TESTS`
 0.16.1
