--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 0.17.0
+ - integration with DCOR version bump for CKAN 2.11.3
  - BREAKING: remove symlinking resources to user depot functionality
  - BREAKING: remove `paths` submodule
  - BREAKING: remove `orgs` submodule
