--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.17.1
+ - enh: also remove depot files when migrating resources to S3
 0.17.0
  - integration with DCOR version bump for CKAN 2.11.3
  - BREAKING: remove symlinking resources to user depot functionality
