--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 0.19.0
  - feat: new CLI command `dcor-prune-stale-multipart-uploads`
+ - setup: bump dcor_shared to 0.14.0
 0.18.0
  - BREAKING: rename CLI `import-figshare` to `dcor-import-figshare`
  - enh: also remove depot files when migrating resources to S3
