docs: generalized DC naming

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -176,7 +176,7 @@
  - enh: update file ignore patterns for depotize
 0.8.0
  - feat: implement "depotize_archive" for populating the internal depot
-   with tarred RT-DC data (This step is required for importing
+   with tarred DC data (This step is required for importing
    internal data with internal-import)
  - fix: download large files with small memory footprint
 0.7.11
