--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.19.1
+ - ref: remove deprecated `sha_256`
 0.19.0
  - feat: new CLI command `dcor-prune-stale-multipart-uploads`
  - setup: bump dcor_shared to 0.14.0
