--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 1.0.4
+ - enh: circumvent scraping detection on figshare
  - tests: own the docker image
 1.0.3
  - enh: store more metadata when appending resources
