fix: unique cache locations for figshare data

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+1.0.5
+ - fix: unique cache locations for figshare data
 1.0.4
  - enh: circumvent scraping detection on figshare
  - tests: own the docker image
